--- a/moVirt/src/main/res/layout/activity_vm_detail.xml
+++ b/moVirt/src/main/res/layout/activity_vm_detail.xml
@@ -21,7 +21,8 @@ android:layout_height="match_parent">
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <fragment
-                class="org.ovirt.mobile.movirt.ui.VmDetailGeneralFragment_"
+                android:id="@+id/generalInfo"
+                class="org.ovirt.mobile.movirt.ui.vms.VmDetailGeneralFragment_"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
